# libmpegh

./: CMakeLists.txt  GUIDELINES.md  LICENSE  LICENSE2  Makefile.am  README.md  configure.ac  toolchain_armv7.cmake  toolchain_armv8.cmake  toolchain_x86.cmake
.github/workflows/: Push.yml
decoder/: ia_core_coder_acelp_bitparse.c  ia_core_coder_acelp_com.h  ia_core_coder_acelp_decode.c  ia_core_coder_acelp_info.h  ia_core_coder_acelp_mdct.c  ia_core_coder_acelp_tools.c  ia_core_coder_api_defs.h  ia_core_coder_apicmd_standards.h  ia_core_coder_arith_dec.c  ia_core_coder_arith_dec.h  ia_core_coder_avq_dec.c  ia_core_coder_avq_rom.c  ia_core_coder_avq_rom.h  ia_core_coder_basic_op.h  ia_core_coder_basic_ops.c  ia_core_coder_basic_ops32.h  ia_core_coder_basic_ops40.h  ia_core_coder_bit_extract.h  ia_core_coder_bitbuffer.c  ia_core_coder_bitbuffer.h  ia_core_coder_channel.h  ia_core_coder_channelinfo.h  ia_core_coder_cnst.h  ia_core_coder_common_initfuncs.c  ia_core_coder_config.h  ia_core_coder_constants.h  ia_core_coder_create.c  ia_core_coder_create.h  ia_core_coder_dec.h  ia_core_coder_dec_main.h  ia_core_coder_decode_main.c  ia_core_coder_defines.h  ia_core_coder_definitions.h  ia_core_coder_env_extr.c  ia_core_coder_env_extr.h  ia_core_coder_ext_ch_ele.c  ia_core_coder_func_def.h  ia_core_coder_function_selector.c  ia_core_coder_function_selector.h  ia_core_coder_fwd_alias_cnx.c  (+189 more)
decoder/armv7/: ia_core_coder_basic_op.h  ia_core_coder_basic_ops32.h  ia_core_coder_basic_ops40.h  impeghd_type_def.h
decoder/armv8/: impeghd_type_def.h
decoder/x86/: impeghd_type_def.h
decoder/x86_64/: impeghd_type_def.h
docs/: IA-MPEG-H-3D-Audio-Dec-API.doc  IA-MPEG-H-3D-Audio-Dec-BP.doc  IA-MPEG-H-3D-Audio-Dec-DS.doc  IA-MPEG-H-3D-Audio-Dec-GSG.doc  IA-MPEG-H-3D-Audio-Dec-TR.doc  INDEX.md  doxy.conf
smoke_test_suite/: run_smoke.py
smoke_test_suite/inp/: sine_1khz_000_cicp1.mhas  sine_1khz_cicp16.mhas  sine_1khz_cicp19.mhas  sine_1khz_cicp6.mhas
test/: impeghd_error.c  impeghd_error_handler.h  impeghd_main.c
test/mp4/: impeghd_mp4_atoms.h  impeghd_mp4_defs.h  impeghd_mp4_file.c  impeghd_mp4_file.h  impeghd_mp4_file_wrapper.c  impeghd_mp4_file_wrapper.h  impeghd_mp4_init.c  impeghd_mp4_init.h  impeghd_mp4_mae_parser.c  impeghd_mp4_make_video.h  impeghd_mp4_object_type.h  impeghd_mp4_odf.h  impeghd_mp4_parser.c  impeghd_mp4_parser.h  impeghd_mp4_proto.h  impeghd_mp4_tags.h  impeghd_mp4_utils.c  impeghd_mp4_utils.h  impeghd_mp4_video.c  impeghd_type_def.h
web_plugin/: IA-MPEG-H-3D-Audio-Dec-Browser-Plugin-UG.doc  decode-mpegh3da.js  decode-mpegh3da.wasm  index.html  style-index.css
